minor bug squashing

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -54,7 +54,7 @@ mat-toolbar h1 {
     }
     
     mat-toolbar h1 {
-        font-size: 20px;
+        font-size: 80%;
     }
 }
 
